--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Italian food restaurant in Chicago table booking system"/>
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description"
+      content="Italian food restaurant in Chicago with a table booking reservation system"/>
+      <meta name="og:image"
+      content="http://localhost:3000/img/logo.svg"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
